--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
-.buttons { text-align:right; }
-.container-relative { position:relative; }
-.container-right { bottom:0; position:absolute; right:0; }
-.with-footer { margin-bottom: 90px; }
-.toast { text-align:center; }
-.absolute-top-right { position: absolute; right: var(--universal-margin); top: var(--universal-margin); }
+.button.tag { margin: 0; }
+.container-relative { position: relative; }
+.container-right { bottom: 0; position: absolute; right: 0; }
+.has-footer { margin-bottom: 90px; }
+.toast { text-align: center; }
+.absolute-top-right { margin: var(--universal-margin) !important; position: absolute; right: 0; top: 0; }
 
-blockquote.section { padding: calc(3 * var(--universal-padding)) !important; }
-footer { bottom:0; left:0; position:fixed; right:0; }
-h2.section { text-align:center; }
+blockquote * { font-style: normal; }
+footer { bottom: 0; left: 0; position: fixed; right: 0; }
+h2 { text-align: center; }
