--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,4 @@
 
 blockquote * { font-style: normal; }
 footer { bottom: 0; left: 0; position: fixed; right: 0; }
-h2 { text-align: center; }
+.card h2 { text-align: center; }
