add highlight function

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 /* JesusHouse 2020 */
 #note-top                   { background-color: #f7bcbb !important; color: #000 !important; }
 .badge.badge-success        { background-color: #95e0d2 !important; color: #000 !important; }
+.card.bg-primary            { background-color: #f7bcbb !important; color: #000 !important; }
 .card-body .btn.btn-success { background-color: #95e0d2 !important; border-color: #95e0d2 !important; color: #000 !important; }
